--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       <ul class="menu" role="navigation">
         <li><a href="#about" data-nav>About 👋</a></li>
         <li><a href="#projects" data-nav>Projects 🚀</a></li>
-        <li><a href="#resume" data-nav>Resume</a></li>
+        <li><a href="#resume" data-nav>Resume 📄</a></li>
       </ul>
     </div>
   </header>
@@ -185,7 +185,7 @@
 
 
     <section id="resume">
-      <h2>Resume</h2>
+      <h2>Resume 📄</h2>
       <div id="resume-md" class="md"></div>
       <p class="muted">You can also link a PDF like <code>[Download PDF](assets/files/Eric_Zhu_Resume.pdf)</code>.</p>
     </section>
@@ -198,6 +198,7 @@
   <!-- ========================= -->
   <!-- Editable Markdown content -->
   <!-- ========================= -->
+<script type="text/markdown" id="about-src">
 # Hi, I'm Eric 👋
 I'm a USC **M.S. in Computer Science** student and UCSB **B.S. in Physics (CCS, High Honors; minor in Statistics & Data Science, GPA 3.93/4.0)**. I build experimental–computational pipelines, clean data systems, and physics‑informed models — recently focusing on **larval zebrafish locomotion** and lightweight ML for analytics. I love turning messy measurements into clear, testable insights and polished visuals.
 
