--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     .card p{margin:0;color:var(--muted)}
 
     /* Project blocks (auto-wrapped from markdown) */
-    #projects .md .project-card{border:1px solid var(--border); border-radius:16px; background:#fff; box-shadow:var(--shadow); padding:14px 16px; margin:14px 0; transition: transform .18s ease, box-shadow .22s ease}
-    #projects .md .project-card:hover{transform: translateY(-4px) scale(1.01); box-shadow: 0 12px 30px rgba(17,17,17,.12)}
-    #projects .md .project-card:focus-within{outline: 2px solid rgba(43,106,255,.28); outline-offset: 2px}
+    #projects .md .project-card{border:1px solid var(--border); border-radius:16px; background:#fff; box-shadow:var(--shadow); padding:14px 16px; margin:14px 0; transition: transform .22s cubic-bezier(.2,.7,.2,1), box-shadow .24s ease; will-change: transform, box-shadow; transform-origin: center}
+    #projects .md .project-card:hover{transform: translateY(-6px) scale(1.05); box-shadow: 0 16px 36px rgba(17,17,17,.14)}
+    #projects .md .project-card:focus-within{outline: 2px solid rgba(43,106,255,.28); outline-offset: 2px; transform: translateY(-6px) scale(1.05); box-shadow: 0 16px 36px rgba(17,17,17,.14)}
     #projects .md .project-card img{border-radius:12px;}
 
     /* Markdown content defaults */
